[tool.poetry]
name = "alchemical-etchings"
version = "0.1.0"
description = "Mostly meta agnostic destiny armor ranker"
authors = ["GS <gsfernandes81@gmail.com>"]
license = "GPL v3"
readme = "README.md"
# packages = [{include = "alchemical_etchings"}]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
clipboard = "^0.0.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
